# htmx

./: .env  .gitignore  Cargo.toml  docker-compose.yml  dt.tex  event.ics
.sqlx/: query-057da6ab7c4954f752e45772d04e885ca34873d7417859e08267d268452b6206.json  query-081c7c9657c0d92d9a5af4a73139ff0d87ac2c857cfadbdbc372b48bb04754fc.json  query-0e38c072022bbfcfe4161fb881d7d917a8f3bf8e6d30de1b70a95f21d65317c7.json  query-0e8145b1122661a0901e7388dfa908eb8bd08bbd3f00fc097d0b551bd9fd2f65.json  query-13e4718470e5062b9e24ce18a2a70012bdfaf19e4bad19067305a7fc83a09d9b.json  query-1d2e32c3ba1ecbd8769a3d0a5b678fd78be12715f02e1be833d7fd5a4a972ac7.json  query-2608c696f00fb75050dddaca1e8e1ad0c077ab039ef6ee06b261df4b443b1066.json  query-28099071b14dba050f6c1da29790140fb2849e8ad947bfc89591853662ee83e6.json  query-2b2ed0cdc382f617228198619fd7c0955bd35e8c0d73672a248e83f812fe5596.json  query-2c8be16e4bb7c7c6c779ff67f12c7280a818bb18bc59e80ca73a2aa0849590f3.json  query-32e4c6741b7d47c05a80d0c908a42e78dbff050a43b9666ddd1fd8c6ee0f1cbb.json  query-34a50c5a34351ce884026338f323d4547f8245481cf56f7de111e8402352cc3b.json  query-36d354484d858ac165138695914c846d839423be89424c8e5cea4ac09ca24dbe.json  query-3b946cee8929a3a5d44eb675d77291bc67d5024a3c842d0946161f29de5f3593.json  query-41cf3826c2985afd84c8f31dcf0b0c36293ec5809dc71c55a242d74dc7273089.json  query-44909bd45b71913ced2272578d46334f7fac6a94a21ea0e6fd13fc52ef1c68fa.json  query-481d5d69fabb66cbfc108be861d49059651a1f1d16307504b8778f928f6ec8f8.json  query-5a62af6cb8d1145c90339ca3dbf7caa0991b151764013b2a93cade1e94924414.json  query-5d2ebbafc3cb10438f60aa58c8b3881d5d42eed204b58d6e6e53cdb1bb2c4a01.json  query-674c1f5c7d68f5af80be3b868ba55e877ae535341772b292a24c57f269d89f5d.json  query-68473c1a16529317761b244c4403b79163f0befce7ba375f7499c08f06f4fc1c.json  query-73132e47d449d3274755122a86c630ab22c894aef17750e9d15cfb57279fc541.json  query-76726f9d0244076b889c2550e1281c877404c8a14f8dbbefc2d146c96f0e1c85.json  query-79032c7924d6e3030fc78b210d0cf9e35f73c27291710dc3871e51ed15879984.json  query-793c2d088ce0d6f7ecac4445dc69a2623f0edeed12f31df61427859fec266b59.json  query-79b1872ed88a038a057b43f1eb0dc5e884aa5ed55aeb77da4840d73e3e328871.json  (+29 more)
(+105 files in other folders)
